trunk/Archive2/1b/9296193b20bc90/output
main.cpp:33:5: error: member function 'mutate' not viable: 'this' argument has type 'const detail::A', but function is not marked const
    x1.mutate(); //error
    ^~
main.cpp:14:14: note: 'mutate' declared here
        void mutate() {}
             ^
main.cpp:35:5: error: member function 'mutate' not viable: 'this' argument has type 'const detail::A', but function is not marked const
    x1.mutate(); //error
    ^~
main.cpp:14:14: note: 'mutate' declared here
        void mutate() {}
             ^
2 errors generated.
